WIP web interface

--- a/static/src/scss/primary_variables.scss
+++ b/static/src/scss/primary_variables.scss
@@ -9,14 +9,14 @@ $o-font-size-base: 13rem * (1px / $o-root-font-size);
 $o-line-height-base: 1.5; // This is BS default
 
 // Colors
-$o-community-color: #7C7BAD;
+$o-community-color: #142C72;
 $o-enterprise-color: #875A7B;
 $o-enterprise-primary-color: #00A09D;
 
 $o-brand-hexya: $o-community-color;
 $o-brand-primary: $o-community-color;
 
-$o-brand-secondary: #f0eeee;
+$o-brand-secondary:  #C4204B;
 $o-brand-lightsecondary: #e2e2e0;
 $o-gray-100: #f8f9fa; // This is BS default
 
